# verdictswarm-mcp

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC.md  SUPPORT.md  config-schema.json  glama.json  pyproject.toml  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration_help.md
.github/workflows/: ci.yml
examples/: basic_usage.py  claude-desktop.json  claude_desktop_config.json  cursor.json  openclaw.yaml  windsurf.json
src/verdictswarm_mcp/: __init__.py  __main__.py  api_client.py  auth.py  config.py  formatters.py  payments.py  server.py
tests/: conftest.py  test_api_client.py  test_config.py  test_formatters.py  test_payments.py  test_prompts.py  test_server.py
